feat: start adding info on website

--- a/website/index.html
+++ b/website/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Columbia University EECS E4764 IoT Project Report #0</title>
+		<title>Columbia University EECS E4764 IoT Project Report #1</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -24,11 +24,11 @@
 					<!-- Logo -->
 						<div id="logo">
 							<!-- <span class="image avatar48"><img src="images/avatar.jpg" alt="" /></span> -->
-							<h1 id="title">Project Name</h1>
+							<h1 id="title">Smarter Pillow</h1>
 							<p>Columbia University <br>
 								EECS E4764 Spring '21 Internet of Things<br>
 								Intelligent and Connected Systems<br>
-								Team 0 Project Report
+								Team 1 Project Report
 							</p>
 						</div>
 
@@ -64,11 +64,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="icon fa-dribbble"><span class="label">Dribbble</span></a></li>
-							<li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+							<li><a href="https://github.com/eureyuri/smarter-pillow" class="icon fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.youtube.com/watch?v=DvXWixMz54I" class="icon fa-youtube-play"><span class="label">Email</span></a></li>
 						</ul>
 
 				</div>
@@ -82,9 +79,9 @@
 					<section id="top" class="one dark cover">
 						<div class="container">
 
-								<iframe width="560" height="315" src="https://www.youtube.com/embed/_AlcRoqS65E" frameborder="0" allowfullscreen></iframe>
+								<iframe width="560" height="315" src="https://www.youtube.com/embed/DvXWixMz54I" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
-								<h2 class="alt">Project Name</h2>
+								<h2 class="alt">Smarter Pillow</h2>
 								<p>Project Wonderland is a blah blah blah</p>
 								<p>(Abstract here)</p>
 
@@ -189,28 +186,35 @@
 							<div class="row">
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
-											<h3>Team Member</h3>
-											<p>Description and link</p>
+										<a href="#" class="image fit">
+											<img src="images/eurey.jpg" alt="" />
+										</a>
+										<header style="padding: 1em">
+											<h3>Eurey Noguchi</h3>
+											<a href="https://www.eureyuri.codes/" class="icon fa-info-circle"></a>
+											<a href="https://github.com/eureyuri" class="icon fa-github"></a>
+											<p style="margin: 0">
+												Eurey is a senior at Columbia University majoring in Computer Engineering.
+												He is a full stack developer with a passion for web development and design.
+											</p>
 										</header>
 									</article>
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
+										<header style="padding: 1em">
 											<h3>Team Member</h3>
-											<p>Description and link</p>
+											<p style="margin: 0">Description and link</p>
 										</header>
 									</article>
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
-										<header>
+										<header style="padding: 1em">
 											<h3>Team Member</h3>
-											<p>Description and link</p>
+											<p style="margin: 0">Description and link</p>
 										</header>
 									</article>
 								</div>
@@ -228,7 +232,7 @@
 							</header>
 
 							<p align="left">
-								<strong>Contact Name 1: </strong>email here</br>
+								<strong>Eurey Noguchi: </strong>eurey.noguchi@columbia.edu</br>
 								<strong>Contact Name 2: </strong>email here</br>
 								<strong>Other Contact Information: </strong>other contact info</br>
 							</br>
