Detect sound in real time and send the data\

--- a/website/index.html
+++ b/website/index.html
@@ -291,9 +291,12 @@
 								</div>
 								<div class="4u 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit">
+											<img src="images/pic07.jpg" alt="" /></a>
 										<header style="padding: 1em">
-											<h3>Team Member</h3>
+											<h3>Da Shi</h3>
+											<a href="http://linkedin.com/in/da-shi-a87873178" class="icon fa-info-circle"></a>
+											<a href="https://github.com/SupernovaAAC" class="icon fa-github"></a>
 											<p style="margin: 0">Description and link</p>
 										</header>
 									</article>
