feat: update website

--- a/website/index.html
+++ b/website/index.html
@@ -206,26 +206,6 @@
 							</header>
 
 							<div class="item__container">
-								<article class="item result">
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<header>
-										<h3>Android App -- Home</h3>
-									</header>
-								</article>
-
-								<article class="item result">
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<header>
-										<h3>Android App -- Data</h3>
-									</header>
-								</article>
-
-								<article class="item result">
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
-									<header>
-										<h3>Snore detection -- console</h3>
-									</header>
-								</article>
 
 								<article class="item result">
 									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
@@ -233,6 +213,51 @@
 										<h3>Smarter Pillow</h3>
 									</header>
 								</article>
+
+								<article class="item result">
+									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<header>
+										<h3>Smarter Pillow</h3>
+										<p>The hardware setup</p>
+									</header>
+								</article>
+
+								<article class="item result">
+									<a class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<header>
+										<h3>Android App -- Home</h3>
+										<p>
+											The home tab allows the user to set the alarm and cancel the alarm.
+											When the user sets the alarm, our system will automatically start collecting
+											data related to snoring and movement. When we detect snoring or the alarm
+											goes off, we adjust the pillow height.
+											We also see the statistics of yesterday's sleep that has been calculated by
+											our backend Flask server.
+										</p>
+									</header>
+								</article>
+
+								<article class="item result">
+									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<header>
+										<h3>Android App -- Data</h3>
+										<p>
+											The data tab displays the sleep statistics such as the snoring and movement
+											behavior of any day.
+										</p>
+									</header>
+								</article>
+
+								<article class="item result">
+									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<header>
+										<h3>Snore detection -- console</h3>
+										<p>
+											Once the user starts sleeping, we continuously collect data in the background.
+										</p>
+									</header>
+								</article>
+
 							</div>
 
 						</div>
