feat: details of website completed

--- a/website/index.html
+++ b/website/index.html
@@ -145,6 +145,7 @@
 							<p align="left">
 								Our system constitutes of a microcontroller, ESP8266, with a weight sensor, smart plugs
 								with air pumps and air bags, frontend android application, and a backend server.
+								The details of our specification can be found in our <a href="https://github.com/eureyuri/smarter-pillow/blob/main/README.md">README</a>
 							</p>
 
 							<h3 align="left">Architecture</h3>
@@ -208,22 +209,22 @@
 							<div class="item__container">
 
 								<article class="item result">
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/smarter_pillow.gif" alt="" /></a>
 									<header>
 										<h3>Smarter Pillow</h3>
 									</header>
 								</article>
 
 								<article class="item result">
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a class="image fit"><img src="images/hardware.png" alt="" /></a>
 									<header>
 										<h3>Smarter Pillow</h3>
 										<p>The hardware setup</p>
 									</header>
 								</article>
 
-								<article class="item result">
-									<a class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<article class="item result small">
+									<a class="image fit"><img src="images/home_screen.png" alt="" /></a>
 									<header>
 										<h3>Android App -- Home</h3>
 										<p>
@@ -237,8 +238,8 @@
 									</header>
 								</article>
 
-								<article class="item result">
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+								<article class="item result small">
+									<a class="image fit"><img src="images/data_screen.png" alt="" /></a>
 									<header>
 										<h3>Android App -- Data</h3>
 										<p>
@@ -249,7 +250,7 @@
 								</article>
 
 								<article class="item result">
-									<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+									<a href="#" class="image fit"><img src="images/snore_console.png" alt="" /></a>
 									<header>
 										<h3>Snore detection -- console</h3>
 										<p>
@@ -280,6 +281,24 @@
 								American Sleep Association: Sleep and Sleep Disorder Statistics
 								<br>
 								<a href="https://www.sleepassociation.org/about-sleep/sleep-statistics/">https://www.sleepassociation.org/about-sleep/sleep-statistics/</a>
+							</p>
+
+							<p align="center">
+								The influence of head-of-bed elevation in patients with obstructive sleep apnea
+								<br>
+								<a href="https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5700252/">https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5700252/</a>
+							</p>
+
+							<p align="center">
+								Interfacing with HX711
+								<br>
+								<a href="https://github.com/robert-hh/hx711/tree/1ca0d87b58eb47f4810241a01e4181880e891b29">https://github.com/robert-hh/hx711/tree/1ca0d87b58eb47f4810241a01e4181880e891b29</a>
+							</p>
+
+							<p align="center">
+								50kg Load Cells with HX711 and Arduino. 4x, 2x, 1x Diagrams.
+								<br>
+								<a href="https://circuitjournal.com/50kg-load-cells-with-HX711">https://circuitjournal.com/50kg-load-cells-with-HX711</a>
 							</p>
 
 						</div>
