add personal info to the website

--- a/website/index.html
+++ b/website/index.html
@@ -336,12 +336,14 @@
 								<div class="4u 12u$(mobile)">
 									<article class="item">
 										<a href="#" class="image fit">
-											<img src="images/pic07.jpg" alt="" /></a>
+											<img src="images/david.jpeg" alt="" /></a>
 										<header style="padding: 1em">
-											<h3>Da Shi</h3>
+											<h3>Da Shi (David)</h3>
 											<a href="http://linkedin.com/in/da-shi-a87873178" class="icon fa-info-circle"></a>
 											<a href="https://github.com/SupernovaAAC" class="icon fa-github"></a>
-											<p style="margin: 0">Description and link</p>
+											<p style="margin: 0">
+												David is a Computer Engineering senior, who is passionate about machine learning.
+											</p>
 										</header>
 									</article>
 								</div>
@@ -369,8 +371,8 @@
 
 							<p align="left">
 								<strong>Eurey Noguchi: </strong>eurey.noguchi@columbia.edu</br>
-								<strong>Contact Name 2: </strong>email here</br>
-								<strong>Other Contact Information: </strong>other contact info</br>
+								<strong>Da Shi: </strong>ds3843@columbia.edu</br>
+								<strong>Shiyu Li: </strong>sl4684@columbia.edu</br>
 							</br>
 								<strong>Columbia University </strong><a href="http://www.ee.columbia.edu">Department of Electrical Engineering</a><br>
 								<!-- <strong>Class Website:</strong>
