--- a/website/index.html
+++ b/website/index.html
@@ -349,10 +349,11 @@
 								</div>
 								<div class="4u$ 12u$(mobile)">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+										<a href="#" class="image fit"><img src="images/shiyu.jpg" alt="" /></a>
 										<header style="padding: 1em">
-											<h3>Team Member</h3>
-											<p style="margin: 0">Description and link</p>
+											<h3>Shiyu Li</h3>
+											<a href="https://github.com/sl4684" class="icon fa-github"></a>
+											<p style="margin: 0">Shiyu Li is a columbia student who majors in Computer Engineering.</p>	
 										</header>
 									</article>
 								</div>
